--- a/ui/assets/scss/variables.scss
+++ b/ui/assets/scss/variables.scss
@@ -20,3 +20,8 @@ $green-dark: #001f14;
 $primary-background-white: #e0e7e2;
 $app-sky-blue: #a8d1f0;
 $input-black: #333333;
+
+$faint-primary-color: rgba(101, 213, 135, 1);
+$landing-side-padding: 10rem;
+$sky-blue: rgba(200, 238, 244, 1);
+$sky-blue-lite: rgba(168, 209, 240, 1.0);
