--- a/ui/assets/scss/animations.scss
+++ b/ui/assets/scss/animations.scss
@@ -1,13 +1,13 @@
 @keyframes slideFadeInUp {
-    0% {
-      opacity: 0;
-      transform: translateY(20px);
-    }
-    
-    100% {
-      opacity: 1;
-      transform: translateY(0);
-    }
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 @keyframes slide-in-left {
@@ -21,4 +21,15 @@
   }
 }
 
-  
+@keyframes float {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
