--- a/ui/assets/scss/variables.scss
+++ b/ui/assets/scss/variables.scss
@@ -25,3 +25,5 @@ $faint-primary-color: rgba(101, 213, 135, 1);
 $landing-side-padding: 10rem;
 $sky-blue: rgba(200, 238, 244, 1);
 $sky-blue-lite: rgba(168, 209, 240, 1.0);
+
+$sky-blue-3: #B6EDF2;
