--- a/ui/assets/scss/classes.scss
+++ b/ui/assets/scss/classes.scss
@@ -1,5 +1,5 @@
 .slide-fade-in-up {
-    animation: slideFadeInUp 0.3s ease-out forwards;
+    //animation: slideFadeInUp 0.3s ease-out forwards;
 }
 
 .slide-in-left {
